--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ui-box": "^5.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -18,7 +19,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "generate-svgr": "svgr --out-dir src/Icons/Svgr/ --ignore-existing src/Icons/SvgIcons/"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +56,7 @@
     "@storybook/addon-links": "^6.4.8",
     "@storybook/node-logger": "^6.4.8",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.4.8"
+    "@storybook/react": "^6.4.8",
+    "@svgr/cli": "^6.1.1"
   }
 }
